--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -29,14 +30,35 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation deps.androidx.core
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.activity
+    implementation deps.androidx.roomruntime
+    implementation deps.androidx.fragment
+    implementation deps.androidx.livedata
+
+    implementation deps.retrofit.retrofit
+    implementation deps.retrofit.converter
+
+    implementation deps.dagger.android
+    implementation deps.dagger.support
+
+    implementation deps.timber
+    implementation deps.logging
+    implementation deps.material
+
+    kapt deps.dagger.daggercompiler
+    kapt deps.dagger.androidcompiler
+    kapt deps.androidx.roomcompiler
+
+    testImplementation deps.junit
+    androidTestImplementation deps.androidx.junit_ext
+    androidTestImplementation deps.androidx.expresso
 }
